--- a/.sample.env
+++ b/.sample.env
@@ -1,12 +1,12 @@
 # Mandatory Environment Variable
 
-BOT_TOKEN=
-MAIN_CHANNEL=-1001111
-LOG_CHANNEL=-1001111
-CLOUD_CHANNEL=-1001111
-MONGO_SRV=
+BOT_TOKEN=1922576103:AAEoLI-idGDu2Ui64IIiQNMK4jwDBtrrK5U
+MAIN_CHANNEL=-1002335038787
+LOG_CHANNEL=-1002674737457
+CLOUD_CHANNEL=-1002358588449
+MONGO_SRV=mongodb+srv://leech:leech@cluster0.dfgruri.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 OWNER=1872074304
-BACKUP_CHANNEL=-1001111
+BACKUP_CHANNEL=-1001945054800
 
 # Optional Environment Variable
 
