--- a/.sample.env
+++ b/.sample.env
@@ -10,8 +10,8 @@ BACKUP_CHANNEL=-1001945054800
 
 # Optional Environment Variable
 
-API_ID=
-API_HASH=
+API_ID=16978078
+API_HASH=91ccaf748f031b656bbf64ff47f990e3
 FORCESUB_CHANNEL_LINK=
 FORCESUB_CHANNEL=
 SESSION=
