--- a/.sample.env
+++ b/.sample.env
@@ -15,6 +15,6 @@ API_HASH=91ccaf748f031b656bbf64ff47f990e3
 FORCESUB_CHANNEL_LINK=
 FORCESUB_CHANNEL=
 SESSION=
-SEND_SCHEDULE=
-THUMBNAIL=
-CRF=
+SEND_SCHEDULE=True
+THUMBNAIL=https://envs.sh/s/6mkCjdFJApbEYZX8stsBuA/r4q.jpg
+CRF=32
