Update nano .env

--- a/nano .env
+++ b/nano .env
@@ -13,7 +13,7 @@ BACKUP_CHANNEL=-1001945054800
 API_ID=16978078
 API_HASH=91ccaf748f031b656bbf64ff47f990e3
 FORCESUB_CHANNEL_LINK=
-FORCESUB_CHANNEL=-1002656761774,-1002358532189,-1001526632511
+FORCESUB_CHANNEL=-1002656761774,-1002358532189,-1001526632511,-1001657207796
 SESSION=
 SEND_SCHEDULE=True
 THUMBNAIL=https://envs.sh/s/6mkCjdFJApbEYZX8stsBuA/r4q.jpg
