Update nano .env

--- a/nano .env
+++ b/nano .env
@@ -12,7 +12,7 @@ BACKUP_CHANNEL=-1001945054800
 
 API_ID=16978078
 API_HASH=91ccaf748f031b656bbf64ff47f990e3
-FORCESUB_CHANNEL_LINK=
+FORCESUB_CHANNEL_LINK=https://t.me/Animes2u
 FORCESUB_CHANNEL=-1002358532189
 SESSION=
 SEND_SCHEDULE=True
